# vkDuck

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  meson.build
deprecated/: default_renderer.cpp  material_node.cpp  model_node.cpp  model_node.h  model_node_base.cpp  model_node_base.h  model_settings_ui.h  ubo_node.cpp  ubo_node.h
licenses/: README.md
subprojects/: efsw.wrap  imgui-node-editor.wrap  imgui.wrap  inja.wrap
subprojects/shader-slang/: meson.build
subprojects/shader-slang/subprojects/: shader-slang-linux-x86_64.wrap  shader-slang-macos-aarch64.wrap  shader-slang-windows-x86_64.wrap
subprojects/shader-slang/subprojects/packagefiles/libslang/: meson.build
subprojects/vkDuck/: CMakeLists.txt  meson.build
subprojects/vkDuck/include/vkDuck/: camera_controller.h  image_loader.h  library.h  model_loader.h  vulkan_base.h
subprojects/vkDuck/src/: camera_controller.cpp  image_loader.cpp  library.cpp  model_loader.cpp  vulkan_base.cpp
vulkan_base/: vulkan_base.h  vulkan_device.cpp
vulkan_editor/: editor.cpp  editor.h
vulkan_editor/asset/: asset_library_ui.cpp  asset_library_ui.h  model_manager.cpp  model_manager.h
vulkan_editor/config/: recent_projects.cpp  recent_projects.h  vulkan_enums.cpp  vulkan_enums.h
vulkan_editor/gpu/: batched_stager.cpp  batched_stager.h  primitives.cpp  primitives.h  staging_buffer_pool.cpp  staging_buffer_pool.h
vulkan_editor/gpu/primitives/: common.h  descriptors.cpp  images.cpp  pipeline.cpp  store.cpp  uniform_buffer.cpp  vertex_data.cpp
vulkan_editor/graph/: camera_node.cpp  camera_node.h  default_renderer.cpp  default_renderer.h  fixed_camera_node.cpp  fixed_camera_node.h  fps_camera_node.cpp  fps_camera_node.h  light_node.cpp  light_node.h  link.cpp  link.h  material_node.cpp  material_node.h  model_node.cpp  model_node.h  model_types.h  multi_material_node.cpp  multi_material_node.h  multi_model_consumer_base.cpp  multi_model_consumer_base.h  multi_model_node_base.cpp  multi_model_node_base.h  multi_model_source_node.cpp  multi_model_source_node.h  multi_ubo_node.cpp  multi_ubo_node.h  multi_vertex_data_node.cpp  multi_vertex_data_node.h  node.cpp  node.h  node_graph.cpp  node_graph.h  pin_helpers.h  pin_id_hash.h  pin_registry.cpp  pin_registry.h  pipeline_node.cpp  pipeline_node.h  present_node.cpp  (+7 more)
vulkan_editor/io/: directory_watcher.cpp  directory_watcher.h  file_generator.cpp  file_generator.h  graph_serializer.cpp  graph_serializer.h  image_loader.cpp  image_loader.h  model_watcher.cpp  model_watcher.h  primitive_generator.cpp  primitive_generator.h  serialization.h
vulkan_editor/shader/: shader_manager.cpp  shader_manager.h  shader_reflection.cpp  shader_reflection.h  shader_types.h  shader_watcher.cpp  shader_watcher.h  vertex_input_attribute.h
vulkan_editor/ui/: attachment_editor_ui.cpp  attachment_editor_ui.h  camera_editor_ui.cpp  camera_editor_ui.h  debug_console_ui.cpp  debug_console_ui.h  light_editor_ui.cpp  light_editor_ui.h  live_view.cpp  live_view.h  model_settings_ui.cpp  model_settings_ui.h  multi_model_settings_ui.cpp  multi_model_settings_ui.h  pipeline_editor_ui.cpp  pipeline_editor_ui.h  pipeline_settings.h  pipeline_settings_ui.cpp  pipeline_settings_ui.h  selection_controller.h  user_messages_ui.cpp  user_messages_ui.h
vulkan_editor/util/: logger.cpp  logger.h
